--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,6 @@
 /* ---------------------- Other --------------------------- */
 *{
-  box-sizing: border-box;
+    box-sizing: border-box;
 }
 body{
     font-family: arial;
@@ -15,71 +15,101 @@ body{
     justify-content: space-around;
 }
 a{
-  color: #fff;
-  text-decoration: none;
-  transition: 0.2s;
+    color: #fff;
+    text-decoration: none;
+    transition: 0.2s;
 }
 button{
-  cursor: pointer;
+    cursor: pointer;
 }
 /* ---------------------- Header --------------------------- */
 
 .header_main{
-  background-color: #555;
-  color: #fff;
-  padding: 0 20px;
-  border-bottom: 4px solid #9744be;
+    background-color: #555;
+    color: #fff;
+    padding: 0 20px;
+    border-bottom: 4px solid #eee;
 }
 .header_logo a{
-  height: 100%;
-  display: flex;
-  align-items: center;
-  color: #fff;
-  text-decoration: none;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    color: #fff;
+    text-decoration: none;
 }
 .header_logo a:hover{
-  color: #fff;
-  text-decoration: underline;
+    color: #fff;
+    text-decoration: underline;
 }
 .header_logo span{
-  display: block;
-  font-size: 1.6em;
+    display: block;
+    font-size: 1.6em;
 }
 .header_nav a{
-  color: #fff;
-  display: block;
-  padding: 20px 20px;
-  border-top: 4px solid #555;
-  border-left: 4px solid #555;
-  border-right: 4px solid #555;
+    color: #fff;
+    display: block;
+    text-transform: capitalize;
+    padding: 20px 20px;
+    border-left: 4px solid #555;
+    border-right: 4px solid #555;
+    t
 }
 .header_nav a:hover{
-  background-color: #fff;
-  border-top: 4px solid #9744be;
-  border-left: 4px solid #9744be;
-  border-right: 4px solid #9744be;
-  color: #9744be;
+    background-color: #eee;
+    border-left: 4px solid #8A2BE2;
+    border-right: 4px solid #8A2BE2;
+    color: #8A2BE2;
+}
+.header_nav a.curr_page{
+    background-color: #eee;
+    border-left: 4px solid #eee;
+    border-right: 4px solid #eee;
+    color: #8A2BE2;
 }
 
 /* ---------------------- Main --------------------------- */
 .content_main{
-  background-color: #000;
-  min-height: 900px;
+    background-color: #000;
+    min-height: 900px;
 }
 
 /* - - - - - Assignment Frame - - - - - */
 .main_assignment_wrap{
-  width: 100%;
-  padding: 60px 10%;
+    width: 100%;
+    padding: 60px 10%;
 }
 
-#main_assignment{
-  display: flex;
-  font-size: 20px;
-  color: #fff;
+.main_assignment{
+    display: flex;
+    flex-wrap: wrap;
+    font-size: 20px;
+    color: #fff;
 }
-#main_assignment a{
-  color: #fff;
+.main_assignment a{
+    display: flex;
+    align-items: center;
+    color: #fff;
+    min-height: 150px;
+    background-color: #444;
+    border: 4px solid #444;
+    border-radius: 8px;
+    transition: 0.3s;
+}
+.main_assignment a:hover{
+    border: 4px solid #8A2BE2;
+    color: #8A2BE2;
+    background-color: #eee;
+}
+.main_assignment span{
+    display: block;
+    text-align: center;
+    font-size: 1.6em;
+    width: 100%;
+    text-transform: capitalize;
+}
+.main_assignment li{
+    margin: 0 calc(10%/6) 20px;
+    width: calc(100%/(100/30));
 }
 
 /* ---------------------- Footer --------------------------- */
