--- a/css/main.css
+++ b/css/main.css
@@ -25,10 +25,9 @@ button{
 /* ---------------------- Header --------------------------- */
 
 .header_main{
-    background-color: #555;
+    background-color: #8A2BE2;
     color: #fff;
     padding: 0 20px;
-    border-bottom: 4px solid #eee;
 }
 .header_logo a{
     height: 100%;
@@ -47,23 +46,17 @@ button{
 }
 .header_nav a{
     color: #fff;
+    font-weight: bolder;
     display: block;
     text-transform: capitalize;
     padding: 20px 20px;
-    border-left: 4px solid #555;
-    border-right: 4px solid #555;
-    t
 }
 .header_nav a:hover{
     background-color: #eee;
-    border-left: 4px solid #8A2BE2;
-    border-right: 4px solid #8A2BE2;
     color: #8A2BE2;
 }
 .header_nav a.curr_page{
     background-color: #eee;
-    border-left: 4px solid #eee;
-    border-right: 4px solid #eee;
     color: #8A2BE2;
 }
 
@@ -90,9 +83,9 @@ button{
     align-items: center;
     color: #fff;
     min-height: 150px;
-    background-color: #444;
-    border: 4px solid #444;
-    border-radius: 8px;
+    background-color: #8A2BE2;
+    border: 4px solid #8A2BE2;
+    border-radius: 5px;
     transition: 0.3s;
 }
 .main_assignment a:hover{
@@ -109,7 +102,7 @@ button{
 }
 .main_assignment li{
     margin: 0 calc(10%/6) 20px;
-    width: calc(100%/(100/30));
+    width: 30%;
 }
 
 /* ---------------------- Footer --------------------------- */
