--- a/clientsideopgave/css/style.css
+++ b/clientsideopgave/css/style.css
@@ -1,5 +1,1 @@
-/* line 4, ../sass/style.scss */
-body {
-  font: 100% Helvetica, sans-serif;
-  background-color: #333333;
-}
+body{font:100% Helvetica,sans-serif;background-color:#333}
