Programming Project Should be 100% done and working

--- a/programmeringsopgave/sass/_values.scss
+++ b/programmeringsopgave/sass/_values.scss
@@ -1,3 +1,6 @@
-$font-stack:    Helvetica, sans-serif;
-$primary-color: #999;
-$font-color: #fff;
+$font-fam:    Helvetica, sans-serif;
+$primary-color: #8A2BE2;
+$background-color: #000;
+$font-color: #eee;
+
+$brick-border: $primary-color;
