--- a/programmeringsopgave/sass/style.scss
+++ b/programmeringsopgave/sass/style.scss
@@ -2,6 +2,93 @@
 @import 'reset';
 
 body {
-  font: 100% $font-stack;
-  background-color: $primary-color;
+  font: 100% $font-fam;
+  background-color: $background-color;
+}
+.puz-wrap{
+    width: 500px;
+    margin: 50px auto 50px;
+    border: 4px solid $primary-color;
+    background-color: $background-color;
+    border-radius: 5px;
+}
+.puz-header{
+    font-size: 2em;
+    background-color: $primary-color;
+    color: $font-color;
+    padding: 10px;
+    box-sizing: border-box;
+    border-bottom: 2px solid $primary-color;
+    font-weight: bolder;
+}
+.puz-main{
+
+}
+.puz-buttwrap{
+    display: flex;
+    padding: 10px;
+    box-sizing: border-box;
+    border-bottom: 2px solid $primary-color;
+}
+.puz-buttwrap>*{
+    margin-right: 5px;
+}
+.puz-buttwrap button, .puz-buttwrap input{
+    font-size: 1.4em;
+    background-color: $primary-color;
+    color: $font-color;
+    border: 2px solid $primary-color;
+    cursor: pointer;
+    padding: 4px 6px;
+    border-radius: 5px;
+    transition: 0.2s;
+}
+.puz-buttwrap>button:hover{
+    background-color: $font-color;
+    color: $primary-color;
+}
+.puz-buttwrap form{
+    display: flex;
+}
+.puz-buttwrap form input{
+    width: 60px;
+    background-color: $font-color;
+    color: $primary-color;
+    border-radius:  5px 0 0 5px;
+    border-right: none;
+}
+.puz-buttwrap form button{
+    border-radius: 0 5px 5px 0;
+    border-left: none;
+}
+.puz-buttwrap form button:hover{
+    border-radius: 0 5px 5px 0;
+    background-color: $font-color;
+    color: $primary-color;
+}
+.puz-list{
+    color: $font-color;
+    padding: 2px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+}
+.puz-list .tile{
+    display: flex;
+    transition: 0.5s linear;
+    width: 10%;
+    border: 2px solid $brick-border;
+    background-color: $brick-border;
+    color: $font-color;
+    cursor: pointer;
+    align-items: center;
+    justify-content: center;
+}
+.puz-list .tile>*{
+    display: block;
+    transition: 0.5s linear;
+    text-align: center;
+    font-weight: bolder;
+    color: $brick-border;
+    font-size: 1.2em;
 }
