Design and content progress

--- a/clientsideopgave/sass/_values.scss
+++ b/clientsideopgave/sass/_values.scss
@@ -1,3 +1,20 @@
-$font-stack:    Helvetica, sans-serif;
-$primary-color: #333;
-$font-color: #fff;
+$font-stack: 'Roboto', sans-serif;
+
+// Background and font colors
+$primary-color: #8A2BE2;
+$primary-font: #fff;
+
+$secondary-color: #000;
+$secondary-font: #fff;
+
+$tertiary-color: #c2f970;
+$tertiary-font: #000;
+
+$background-color: #eee;
+$font-color: #000;
+
+
+//Buttons values
+$button-border: #555;
+$button-color: #fff;
+$button-background: #999;
