--- a/clientsideopgave/sass/style.scss
+++ b/clientsideopgave/sass/style.scss
@@ -12,3 +12,11 @@
 .flex{
     display: flex;
 }
+.content_wrap{
+    padding: 40px 20px;
+    box-shadow: inset 0 0 10px #000000;
+    box-sizing: border-box;
+}
+.content_div{
+
+}
